# hdf4-examples

./: .clang-format  .gitattributes  CMakeLists.txt  CTestConfig.cmake  Using_CMake.txt
JAVA/: CMakeLists.txt
JAVA/exAN/: CMakeLists.txt  h4jex_AN_create_annotation.java
JAVA/exGR/: CMakeLists.txt
JAVA/exSD/: CMakeLists.txt
JAVA/exVD/: CMakeLists.txt
config/cmake/: CTestCustom.cmake  FindHDF4.cmake  HDF4Macros.cmake  HDF4UseFortran.cmake  HDF4_Examples.cmake  HDFExampleMacros.cmake  HDFMacros.cmake  README.txt.cmake.in  cacheinit.cmake  jrunTest.cmake  runTest.cmake
config/toolchain/: intel.cmake
hdf/: CMakeLists.txt
hdf/examples/: CMakeLists.txt  h4ex_GR_create_and_write_chunked_image.c
hdf/examples/AN/: CMakeLists.txt  h4ex_AN_create_annotation.c  h4ex_AN_get_annotation_info.c
hdf/examples/GR/: CMakeLists.txt  h4ex_GR_create_and_write_chunked_image.c  h4ex_GR_create_and_write_image.c
hdf/examples/VD/: CMakeLists.txt  h4ex_VD_read_from_vdata.c  h4ex_VD_write_mixed_vdata.c  h4ex_VD_write_mixed_vdata_struct.c  h4ex_VD_write_to_vdata.c
hdf/examples/VG/: CMakeLists.txt  h4ex_VG_insert_vdatas_to_vgroup.c
hdf/examples/VG/testfiles/: h4ex_VG_vgroup_contents.tst
hdf/fortran/: CMakeLists.txt
mfhdf/: CMakeLists.txt
mfhdf/examples/: CMakeLists.txt
mfhdf/fortran/: CMakeLists.txt
